--- a/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
+++ b/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
@@ -24,7 +24,7 @@ Beyond standard infrastructure-as-a-service functionality, additional components
 ____
 _Source: https://www.openstack.org/software/_
 
-The core of OpenStack is managing a cluster of compute servers which run applications packaged as virtual machines. Beyond traditional hypervisors, OpenStack provides standard APIs to manage virtual storage and virtual networking with features comparable to a physical data center infrastructure
+The core of OpenStack is managing a cluster of compute servers which run applications packaged as virtual machines. Beyond traditional hypervisors, OpenStack provides standard APIs to manage virtual storage and virtual networking with features comparable to a physical data center infrastructure.
 
 The OpenStack community provides a number of user-facing services. Some of them provide the essential infrastructucture-as-a-service (IaaS) functionality for managing applications as virtual machines (VMs) and also higher-level abstractions such as load balancer and autoscalers. It also provides a number of internal infrastructure services, such as different ways of installing, managing, and scaling the OpenStack user-facing services.
 
@@ -32,7 +32,7 @@ https://www.redhat.com/en/blog/red-hat-openstack-services-openshift-next-generat
 
 [quote: https://www.redhat.com/en/technologies/linux-platforms/openstack-platform]
 ____
-Red Hat® OpenStack® Platform is a cloud computing platform that virtualizes resources from industry-standard hardware, organizes those resources into clouds, and manages them so users can access what they need—when they need it.
+Red Hat® OpenStack® Platform is a cloud computing platform that virtualizes resources from industry-standard hardware, organizes those resources into clouds, and manages them so that users can access what they need—when they need it.
 ____
 _Source: https://www.redhat.com/en/technologies/linux-platforms/openstack-platform_
 
@@ -40,7 +40,7 @@ That is, Red Hat OpenStack Services on OpenShift is a platform for building and 
 
 Let's be honest: not all components availabe in the upstream OpenStack project are available with Red Hat OpenStack Services on OpenShift. Not all services and deployment methods from the community are supported by Red Hat as part of its OpenStack product. But "less is more" because Red Hat provides a stable, pre-integrated, secure, and certified set of components. Red Hat also works with a large ecosystem of partners that provide software and hardware certified for Red Hat OpenStack.
 
-Beyond that, Red Hat commited to fixing bugs and addressing security vulnerabilities, while keeping backward compatibility within a product release stream, which you cannot expect from upstream OpenStack.
+Beyond that, Red Hat is commited to fixing bugs and addressing security vulnerabilities, while keeping backward compatibility within a product release stream, which you cannot expect from upstream OpenStack.
 
 On the other side, OpenStack alone is not sufficient to create a private cloud: you have to include and integrate additional components such as an hypervisor, a host operating system, and infrastructure to manage the deployment and high-availability of OpenStack services themselves, such as a clustering middleware.
 
@@ -49,7 +49,9 @@ image::s1-rhoso-lecture-fig-1.png[]
 // SVG figures are not displaying... why?
 //image::s1-rhoso-lecture-fig-1.svg[]
 
-To provide a complete private cloud platform, Red Hat OpenStack on OpenShift includes, as fully supported components:
+// Can we make the name of the diagram visible to the learners?
+
+To provide a complete private cloud platform, Red Hat OpenStack on OpenShift includes, the following fully supported components:
 
 * The https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux[*Red Hat Enterprise Linux (RHEL)*] operating system.
 * The https://www.redhat.com/en/topics/virtualization/what-is-KVM[*KVM*] hypervisor with the https://www.QEMU.org/[*QEMU*] emulation layer and the https://libvirt.org/[*libvirt*] management API, all of them included with RHEL.
@@ -63,7 +65,7 @@ You could install community OpenStack on any Linux operating system distribution
 
 The final component of an OpenStack private cloud is storage. There are a number of certified storage products for OpenStack and Red Hat offers https://www.redhat.com/en/technologies/storage/ceph[*Red Hat Ceph Storage*] as a reliable, scalable, and high-performance software-defined storage product.
 
-Red Hat Ceph Storage can provide storage services using standard server hardware or it can augument the capabilities of existing storage arrays. A single Red Hat Ceph cluster can provide file, block, and object storage services for multiple Red Hat OpenStack and Red OpenShift clusters.
+Red Hat Ceph Storage can provide storage services using standard server hardware or it can augument the capabilities of existing storage arrays. A single Red Hat Ceph cluster can provide file, block, and object storage services for multiple Red Hat OpenStack and Red Hat OpenShift clusters.
 
 // We may need some link/info about IBM Ceph in the above para
 
@@ -76,18 +78,20 @@ An OpenStack cluster is composed of two parts:
 
 image::s1-rhoso-lecture-fig-3.png[]
 // slide #3 from https://docs.google.com/presentation/d/1lPtAxaKH9P2SjgexIwBi5RxHOjIUQV44R5c4nnrug74/edit#slide=id.p
+// Can we give a name to this image?
 
-You add compute power to an OpenStack cluster by adding phisical servers, running RHEL, as compute nodes to the data plane. The more compute nodes, more application VMs your cluster can host.
+You add compute power to an OpenStack cluster by adding physical servers, running RHEL, as compute nodes to the data plane. The more compute nodes, more application VMs your cluster can host.
 
 To ensure the performance and reliability of the control plane, and by extension the performance and reliability of the whole cluster, you reserve three or more physical servers to running only OpenStack services. A large OpenStack cluster may require more servers dedicated to the control plane and can partition the control plane into multiple cells, each dedicated to manage a subset of the data plane.
 
 With previous releases of Red Hat OpenStack, you could use different approaches to deploy and scale the the control plane, such as https://www.redhat.com/en/topics/linux/what-is-high-availability[clustered RHEL servers] with https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html/configuring_and_managing_high_availability_clusters/index[pacemaker], a https://access.redhat.com/products/red-hat-virtualization/[Red Hat  Virtualization] hypervisor cluster, or an OpenStack cluster known as the _undercloud_, using what was known as the OpenStack on OpenStack architecture or https://www.redhat.com/en/blog/tripleo-director-components-detail[TripleO]. None of these options is available with the current Red Hat OpenStack Services on OpenShift product: you must run an OpenStack the control plane as containers on an Red Hat OpenShift cluster.
+// Are the first two links correct? That is - clustered Red Hat servers and pacemakers?
 
 Microservices developers realized a while ago that containers and Kubernetes are the best way to manage applications composed of multiple services. Even developers targeting public clouds, such as AWS and Azure, nowadays prefer running Kubernetes on those clouds. OpenStack is such a kind of application, and it just makes sense to use Red Hat OpenShift, which is an enterprise application platform based on Kubernetes, to manage all services of an OpenStack control plane.
 
 == Other Ways of Running VMs with OpenShift
 
-If OpenStack is essentially a way of running and managing application workloads as VMs, and Red Hat OpenStack runs on OpenShift, why not running and managing application workloads as VMs directly on OpenShift, using https://www.redhat.com/en/technologies/cloud-computing/openshift/virtualization[*OpenShift Virtualization*] or https://www.redhat.com/en/blog/learn-openshift-sandboxed-containers[*OpenShift Sandboxed Containers*]? The following table provides a quick comparision between the three technologies currently available for managing application VMs using OpenShift: 
+If OpenStack is essentially a way of running and managing application workloads as VMs, and Red Hat OpenStack runs on OpenShift, why not run and manage application workloads as VMs directly on OpenShift, using https://www.redhat.com/en/technologies/cloud-computing/openshift/virtualization[*OpenShift Virtualization*] or https://www.redhat.com/en/blog/learn-openshift-sandboxed-containers[*OpenShift Sandboxed Containers*]? The following table provides a quick comparision between the three technologies currently available for managing application VMs using OpenShift: 
 
 [options="header",cols="1,1,1,1"]  
 |===
