--- a/modules/ch1-intro/pages/s2-components-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s2-components-quiz-answers.adoc
@@ -57,7 +57,7 @@ _Incorrect: Only OpenStack services run on the OpenShift cluster._
 
 4. How does Red Hat OpenStack Services on OpenShift ensures that OpenStack control planes are reliable and scalable?
 
-* [ ] By runnig control plane servers as VMs using a standalone hyperviusor such as RHV. +
+* [ ] By runnig control plane servers as VMs using a standalone hypervisor such as RHV. +
 _Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift._
 
 * [ ] By running control plane servers as systemd services managed by RHEL pacemaker. +
