--- a/modules/ch2-services/pages/s4-additional-quiz-answers.adoc
+++ b/modules/ch2-services/pages/s4-additional-quiz-answers.adoc
@@ -27,7 +27,7 @@ _Incorrect: There is no requirement for special scheduling of application VMs no
 * [x] *Key Management (Barbican)* +
 _Correct: It is recommended that applications do not store access credentails such as tokens and certificates on their VM images nor data volumes, but fech those credentials from Barbican either on demand or with a custom initialization script._
 
-2. Which of the following OpenStack services would be useful for a mobile Customer Support Management system which includes a scalable REST API layer designed to run more or less server instances accoding to load from end-users? The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.
+2. Which of the following OpenStack services would be useful for a mobile Customer Support Management system which includes a scalable REST API layer designed to run more or less server instances according to load from end-users? The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.
 
 * [ ] Shared Filesystems (Manila) +
 _Incorrect: There is no requirement of acessing shared filesystems._
@@ -50,7 +50,7 @@ _Incorrect: There is no requirement for special scheduling of application VMs no
 * [x] *Key Management (Barbican)* +
 _Correct: The mobile application would get short-lived access credentials to Swift for uploading images to object storage, either by invoking barbican directly, or indirectly by the REST API layer._
 
-3. Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scients to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Matematicians who are not using the platform but rely on desktop applications.
+3. Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scients to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Mathematicians who are not using the platform but rely on desktop applications.
 
 * [x] *Shared Filesystems (Manila)* +
 _Correct: The requirements ask for sharing files with desktop applications, no matterh they run inside or outside the OpenStack cluster._
