--- a/modules/ch2-services/pages/s5-administration-lecture.adoc
+++ b/modules/ch2-services/pages/s5-administration-lecture.adoc
@@ -23,7 +23,7 @@ image::s5-administration-lecture-fig1.png[]
 
 == OpenStack Authentication and Service Discovery: Keystone
 
-We were already introduced to Keysone because of its role when any client interacts with OpenStack APIs: It is the authentication entry point and it provides the API entry points for all other user-facing services.
+We were already introduced to Keystone because of its role when any client interacts with OpenStack APIs: It is the authentication entry point and it provides the API entry points for all other user-facing services.
 
 OpenStack KeyStone also manages resources which enable organizing the work of Operations and Administration teams, such as projects and domains: 
 
@@ -35,9 +35,9 @@ OpenStack domains::
 
 All OpenStack API resources and users also belong to a *domain*. OpenStack API resources belong to a domain indirectly, because their project belong to a domain. A domain holds the connection to a external identity management system, and users from one domain can be given access to API resources in another domain.
 
-Cluster-level API resources live in special domain named *default* and a special project inside that domain, named *system*.
+Cluster-level API resources live in a special domain named *default* and a special project inside that domain, named *system*.
 
-OpenStack Keystone also has a role in authorization relate to OpenStack APIs, by providing many attributes which individual services use to make authorization decisions, such as *groups* and *roles*, but Keystone itself does not make any authorization decision: services make those decisions, by themselves, which can occasionaly create inconsistencies.
+OpenStack Keystone also has a role in authorization related to OpenStack APIs, by providing many attributes which individual services use to make authorization decisions, such as *groups* and *roles*, but Keystone itself does not make any authorization decision: services make those decisions, by themselves, which can occasionally create inconsistencies.
 
 == Web UI for OpenStack Cluster Operation and Administration: Horizon
 
@@ -45,17 +45,17 @@ We were already introduced, in chapter 1, to the OpenStack Dashboard: Horizon. I
 
 Horizon discovers OpenStack APIs using Keystone and authenticates using it, like any other tool which access and manages OpenStack clusters and applications hosted on them. It just runs as part of the control plane of an OpenStack cluster, but has no special nor low-level access to OpenStack.
 
-== Physical Manchine Management: Ironic
+== Physical Machine Management: Ironic
 
 // If I got it right, Ironic belongs to "additional" instead of "administration"
 
-OpenStack Ironic enables managing physical machines as if they were virtual machies, as long as those machines have management hardware which is compliant to standards, such as https://en.wikipedia.org/wiki/Intelligent_Platform_Management_Interface[IPMI] or https://redfish.dmtf.org/[Redfish], or from a vendor which provider an OpenStack driver for its proprietary hardware management interface. 
+OpenStack Ironic enables managing physical machines as if they were virtual machies, as long as those machines have management hardware which is compliant to standards, such as https://en.wikipedia.org/wiki/Intelligent_Platform_Management_Interface[IPMI] or https://redfish.dmtf.org/[Redfish], or from a vendor who provides an OpenStack driver for its proprietary hardware management interface. 
 
 Through Ironic, you can perform operations such as powering on and off a physical machine, or booting it from virtual, local, or remote media to install an operating system. These enable automating provisioning, tearing-down, and even recovery of machines from software errors. Of course, all that depends on the physical machines being already wired to the correct server hack, power supply, and network switches.
 
-Previous releases of Red Hat Openstack platform could use Ironic to provision compute nodes for the OpenStack cluster itself, but Red Hat OpenStack Services on OpenShift uses Ironic only for provisiong machines to be used as server instances by an OpenStack Operator to run application workloads.
+Previous releases of Red Hat Openstack platform could use Ironic to provision compute nodes for the OpenStack cluster itself, but Red Hat OpenStack Services on OpenShift uses Ironic only for provisioning machines to be used as server instances by an OpenStack Operator to run application workloads.
 
-OpenStack Operators can use physical machines managed by Ironic as just another class of server instance (or *flavor), intended for applications which require lots of compute capacity or hardware speeds. Remember that OpenStack provides mechanisms to deal with special hardware, such as GPUs and SR-IOV network acellerator cards, and you do not need to deploy applications on physical machines to get access to different kinds of special hardware.
+OpenStack Operators can use physical machines managed by Ironic as just another class of server instance (or *flavor), intended for applications which require lots of compute capacity or hardware speeds. Remember that OpenStack provides mechanisms to deal with special hardware, such as GPUs and SR-IOV network accelerator cards, and you do not need to deploy applications on physical machines to get access to different kinds of special hardware.
 
 Because of its specific usage, Ironic is the only service of Red Hat OpenStack Services on OpenShift that could be typically disabled.
 
@@ -63,7 +63,7 @@ Because of its specific usage, Ironic is the only service of Red Hat OpenStack S
 
 OpenStack Cleilometer collects, transforms, and normalizes performance data from other OpenStack services. The data from Ceilometer enables other features such as autoscaling of server groups and includes not only per-service data but also per resource, such as server instances, volumes, and computes.
 
-Some of the data from Ceilometer feed nice graphics and dashboards in Horizon, but Ceilometer it is not intended to be a complete nor standalone monitoring and observability solution. OpenStack Administrator require third-party products or open source projects to visualize, query, and analyse data from Ceilometer, besides long-term storage of those data for capacity planing, assessing sazonability patterns, and other uses.
+Some of the data from Ceilometer feed nice graphics and dashboards in Horizon, but it is not intended to be a complete nor standalone monitoring and observability solution. OpenStack Administrator require third-party products or open source projects to visualize, query, and analyse data from Ceilometer, besides long-term storage of those data for capacity planing, assessing seasonability patterns, and other uses.
 
 Red Hat OpenStack Services on OpenShift feeds the data from Ceilometer to OpenShift Monitoring for storage, and OpenStack Administrators can use OpenShift Monitoring dashoards and PromQL queries from Prometheus to visualize, query, and generate alerts.
 
