--- a/modules/ch2-services/pages/s7-heat-demo.adoc
+++ b/modules/ch2-services/pages/s7-heat-demo.adoc
@@ -26,11 +26,11 @@ The demo environment must also provide a user workstation preconfigured with the
 
 2. Show the sample Heat template, highlight its networks and server instances. Show the template includes some low-level resources which an Operator would not usually see from regular workflows using Horizon or the OpenStack client, such for network ports connecting server instances to tenant networks.
 
-4. Show, inside the template, the resources that provide for autoscaling and loadbalancing, whithout getting lost on the detailed YAML syntax of the template. The demo is about what it does instead of how to write it.
+4. Show, inside the template, the resources that provide for autoscaling and loadbalancing, without getting lost on the detailed YAML syntax of the template. The demo is about what it does instead of how to write it.
 
 5. Create the application from the template, monitor progress, and show when it's all done. Then show the main resources (server instances, LBs, server groups) in Horizon and emphasize you could manage them as regular resources, irrespective of Heat.
 
-6. Access the application, just to show it works. Maybe the app displays the hostname or IP address of its serer instance, to make it easier to observer load balancing and autoscaling.
+6. Access the application, just to show it works. Maybe the app displays the hostname or IP address of its server instance, to make it easier to observer load balancing and autoscaling.
 
 7. Run an artifical load generator and show, in the project overview page, that more server instances got created.
 
